--- a/compiler/type.go.tmpl
+++ b/compiler/type.go.tmpl
@@ -4,11 +4,11 @@ package {{ .PackageName }};
 
 option go_package = "pb/{{ .PackageName }}";
 
-{{- range $name, $type := .Types }}
+{{ range $name, $type := .Types }}
 message {{ $name }} {
     {{- range $fieldName, $field := $type.Fields}}
-    {{ $field.TypeName }} {{ $fieldName }} = {{ $field.Index }} {{- range $attributeName, $attribute := $field.Attributes}} {{- if eq $attributeName "JSON"}} [json_name="{{ (index $attribute 0) }}"] {{ end }} {{ end}}; 
+    {{ $field.TypeName }} {{ $fieldName }} = {{ $field.Index }} {{- range $attributeName, $attribute := $field.Attributes}} {{- if eq $attributeName "JSON"}} [json_name="{{ (index $attribute 0) }}"] {{- end }} {{- end}}; 
     {{- end}}
 }
-{{- end }}
+{{ end }}
 
